# DRF-Identity-Service

./: .env  .env.example  .gitignore  Dockerfile  Documentation.md  Makefile  README.md  auth_serializers.py  auth_views.py  docker-compose.yml  pyproject.toml  script.py  settings.py  urls.py  user_models.py
accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
audit/: __init__.py  apps.py  middleware.py
batches/: __init__.py  apps.py  models.py
config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
core/: __init__.py  exceptions.py  middleware.py  permissions.py  utils.py
inspections/: __init__.py  apps.py  models.py
serializations/: __init__.py  apps.py  models.py
sites/: __init__.py  apps.py  models.py
